# tosca

./: .gitignore  404.html  Makefile  README.md  extract-resource-requirements.py  generated_rdt.yaml  index.html  manifest.yaml.j2  mkdocs.yml  pyproject.toml  quickgen.py  run_manifest_generator.py  run_validation.py  validation.py
.devcontainer/: .devcontainer  .devcontainer.json  devcontainer.json
.github/workflows/: docs.yaml  parse.yaml  quality.yaml  release.yml
authors/: index.html
capacity/: index.html
capacity_spec/: index.html
cdt/: index.html
demo/: stressng-and-resource.yaml  stressng.yaml
docs/: authors.md  capacity.md  cdt.md  index.md  sardou.md  sat.md
examples/capacities/: capacity-config-s.yaml  capacity-config.yaml  edge-capacity.yaml  sztaki-capacity-flavor.yaml  sztaki-capacity-instances.yaml  sztaki-capacity-overall.yaml  sztaki-resource-defs.yaml  (+1 more)
floria/: __init__.py  floria.py  requirements.py
microservice/: index.html
monitoring/: index.html
outputs/: ask.yaml
policy/: index.html
sardou/: __init__.py  capacities.py  cli.py  index.html  manifestGenerator.py  rdt.py  requirements.py  sardou.py  validation.py
sat/: index.html
search/: search_index.json
templates/: BookInfo.yaml  EMS_metric_model.yaml  stressng-and-resource.yaml  stressng-aws-resource.yaml  stressng-concrete-resource.yaml  stressng-ec2.yaml  stressng-edge-resource.yaml  stressng-openstack-resource.yaml  stressng.yaml  test.yaml  test_copy.yaml
tests/: marks.py  test_cli.py  test_library.py  test_unit.py
tools/: docsgen.py
(+17 files in other folders)
