[project]
name = "Sardou"
version = "0.4.2"
description = "Sardou TOSCA Library"
readme = "README.md"
authors = [
    { name="Jay DesLauriers", email="j.deslauriers@westminster.ac.uk" }
]
dependencies = [
    "ruamel-yaml",
]
requires-python = ">=3.12"

[project.scripts]
sardou = "sardou.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sardou"]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
